2007-11-21  Roland Mas  <lolando@debian.org>

	* deb-specific/install-db.sh: Setup database for access through
	the Unix socket rather than TCP socket (in order to lighten the
	dependency on IP addresses).

2007-11-20  Roland Mas  <lolando@debian.org>

	* common/include/cron_utils.php: Made the semaphore handling a bit
	more robust.

2007-11-09  Roland Mas  <lolando@debian.org>

	* common/include/PluginManager.class.php: Fixed undefined variable
	bug detected by a PHP notice.
	* www/include/project_home.php: Ditto.

	* Replaced $sys_datefmt with a localised format (lots of changes).
	* Ditto with $sys_shortdatefmt.
	* Removed unused $sys_strftimefmt.

2007-11-07  Roland Mas  <lolando@debian.org>

	* common/include/GroupJoinRequest.class.php: New
	send_accept_mail() function.
	* www/project/admin/index.php: Use it.

2007-11-06  Roland Mas  <lolando@debian.org>

	* www/include/BaseLanguage.class.php: Added
	setup_gettext_from_browser() and setup_gettext_for_user(), to be
	able to temporarily override a locale.
	* www/include/pre.php: Adapt accordingly.
	* common/include/GroupJoinRequest.class.php: Switch to the email
	recipient's locale before sending email, then switch back to the
	current user's locale.
	* common/include/Group.class.php: Ditto for group
	approval/rejection messages.

2007-11-04  Roland Mas  <lolando@debian.org>

	* Several fixes to remove vulnerabilities against symlink attacks
	in /tmp (CVE-2007-3921).
	* common/include/cron_utils.php: Use semaphore rather than
	insecure lock files.
	* cronjobs/massmail.php: Adapt to that semaphore change.
	* www/soap/index.php: Commented out debugging code that could be
	used to overwrite files.
	* cronjobs/mail/mailaliases.php and mailing_lists_create.php: Use
	/var/lib/gforge/dumps/mailman-aliases rather than
	/tmp/mailman-aliases. 

2007-10-31  Roland Mas  <lolando@debian.org>

	* www/include/project_home.php: updated
	"project_after_description" hook and added